<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fahed.developer.bestparty.MainActivityFragment"
    tools:showIn="@layout/activity_main">
    <com.fahed.developer.bestparty.libreriaVideo.StretchVideoView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/vvIntro"
        android:layout_marginBottom="60dp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/scrim"
        android:layout_marginBottom="60dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="right">

        <ImageView
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:id="@+id/imageView"
            android:src="@mipmap/beer"
            android:layout_marginTop="5dp"
            android:layout_marginRight="5dp"
            android:scaleType="centerCrop" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom">

        <ViewFlipper
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:id="@+id/vfInformacion"
            android:layout_gravity="left">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:paddingLeft="20dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:id="@+id/tvHola"
                    android:text="@string/tv_Hola"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="sans-serif-light"
                    android:textStyle="normal"
                    android:typeface="sans"
                    android:textSize="22sp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tvHolaDescripcion"
                    android:text="@string/tv_HolaDescripcion"
                    android:textColor="@android:color/white"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:gravity="center"
                    android:textSize="13sp"/>


            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="left|right"
                android:paddingLeft="20dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tv_Fiesta1"
                    android:id="@+id/tvFiesta1"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_FiestaDescripcion1"
                    android:id="@+id/tvFiestaDes1"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="left|right"
                android:paddingLeft="20dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tv_Fiesta2"
                    android:id="@+id/tvFiesta2"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_FiestaDescripcion2"
                    android:id="@+id/tvFiestaDes2"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="left|right"
                android:paddingLeft="20dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tv_Fiesta3"
                    android:id="@+id/tvFiesta3"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_FiestaDescripcion3"
                    android:id="@+id/tvFiestaDes3"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"
                    android:gravity="center" />

            </LinearLayout>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="left|right"
                android:paddingLeft="20dp"
                android:paddingRight="10dp">

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/tv_Fiesta4"
                    android:id="@+id/tvFiesta4"
                    android:textColor="@color/colorAccent"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textSize="18sp"
                    android:gravity="center" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tv_FiestaDescripcion4"
                    android:id="@+id/tvFiestaDes4"
                    android:fontFamily="sans-serif-medium"
                    android:textStyle="normal"
                    android:textColor="@android:color/white"
                    android:textSize="13sp"
                    android:gravity="center" />

            </LinearLayout>

        </ViewFlipper>


        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimaryDark">

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ibRedesSocial1"
                android:layout_weight="3"
                android:src="@mipmap/facebook"
                android:background="@android:color/transparent" />

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ibRedesSociale2"
                android:src="@mipmap/youtube"
                android:background="@android:color/transparent"
                android:layout_weight="3" />

            <ImageButton
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ibtnRedesSociales3"
                android:src="@mipmap/pintrest"
                android:background="@android:color/transparent"
                android:layout_weight="3" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>
